<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/status_bar_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57.18dp"
        android:background="#f7f7f7"
        android:orientation="horizontal">


        <RelativeLayout
            android:id="@+id/conversation_btn_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">

            <TextView
                android:id="@+id/conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_message"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/tab_conversation_tab_text"
                android:textColor="@color/tab_text_selected_color"
                android:textSize="12sp" />

            <com.tencent.qcloud.tim.uikit.component.UnreadCountTextView
                android:id="@+id/tv_new_msg_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/conversation"
                android:layout_alignEnd="@id/conversation"
                android:layout_marginTop="-7dp"
                android:layout_marginEnd="-10dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="#fff"
                android:textSize="10sp"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contact_btn_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">


            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/contact_normal"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/tab_contact_tab_text"
                android:textSize="12sp" />

            <com.tencent.qcloud.tim.uikit.component.UnreadCountTextView
                android:id="@+id/tv_new_friend_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/contact"
                android:layout_alignEnd="@id/contact"
                android:layout_marginTop="-7dp"
                android:layout_marginEnd="-10dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="#fff"
                android:textSize="10sp"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/find_btn_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">

            <TextView
                android:id="@+id/find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/find_normal"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/find"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/myself_btn_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">

            <TextView
                android:id="@+id/mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/myself_normal"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/tab_profile_tab_text"
                android:textSize="12sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>